--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,32 +1,42 @@
 name: Auto Update Intel Data
 
 on:
+  # 允许手动点击按钮触发
+  workflow_dispatch:
+  # 设置每小时自动运行一次 (UTC时间)
   schedule:
-    - cron: '0 * * * *' # 每小时运行一次
-  workflow_dispatch: # 允许手动点击运行
+    - cron: '0 * * * *'
+  # 当你修改代码推送时也会触发
+  push:
+    branches:
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Set up Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
           python-version: '3.9'
 
       - name: Install dependencies
-        run: pip install requests
+        run: |
+          python -m pip install --upgrade pip
+          pip install requests
 
-      - name: Run fetcher
+      - name: Run rss_fetcher.py
         run: python rss_fetcher.py
 
-      - name: Commit and push changes
+      - name: Commit and Push changes
         run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
-          git add intel.json || echo "No changes to commit"
-          git commit -m "Auto-update intel data" || exit 0
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
+          git add intel.json
+          # 如果文件没有变化，git commit 会报错，这里加一个判断防止任务失败
+          git diff --quiet && git diff --staged --quiet || git commit -m "Auto-update intel data"
           git push
